<?xml version="1.0" encoding="utf-8"?>
<!--
/* apps/common/assets/default/default/skins/StatusBar.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License"); 
** you may not use this file except in compliance with the License. 
** You may obtain a copy of the License at 
**
**     http://www.apache.org/licenses/LICENSE-2.0 
**
** Unless required by applicable law or agreed to in writing, software 
** distributed under the License is distributed on an "AS IS" BASIS, 
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
** See the License for the specific language governing permissions and 
** limitations under the License.
*/
-->

<com.android.systemui.statusbar.phone.ExpandedView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
    android:orientation="vertical"
    android:focusable="true"
    android:descendantFocusability="afterDescendants"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:paddingRight="3dp"
        android:background="@drawable/notification_header_bg"
        >
        <com.android.systemui.statusbar.policy.DateView android:id="@+id/date"
            android:textAppearance="@style/TextAppearance.StatusBar.Date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:singleLine="true"
            android:gravity="center_vertical|left"
            android:paddingLeft="4dp"
            />
        <!--
        <com.android.systemui.statusbar.phone.CarrierLabel
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:paddingBottom="1dp"
            android:paddingLeft="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:attr/textColorSecondary"
            />


        <ImageView android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_notify_quicksettings"
            android:contentDescription="@string/accessibility_settings_button"
            />
       -->
        <ImageView android:id="@+id/clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_notify_clear"
            android:contentDescription="@string/accessibility_clear_all"
            />            
</RelativeLayout>

<RelativeLayout

	android:layout_width="match_parent" 
	android:layout_height="60dp" 
	android:background="#ff292929" >

     <ImageView android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_notify_quicksettings"
            android:contentDescription="@string/accessibility_settings_button"
            />
        
</RelativeLayout>      
     
      
    <RelativeLayout android:layout_width="match_parent" android:layout_height="60dp" android:background="#ff292929" >
    <com.android.systemui.tranqtoggles.TranqToggleView android:layout_toRightOf="@id/settings_button" > android:id="@+id/tranq_toggle_view" android:orientation="horizontal" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="55dip" android:layout_marginTop="2dip" android:layout_weight="1.0" >
    <HorizontalScrollView android:scrollbars="none" android:fadingEdge="vertical" android:fadingEdgeLength="20.0px" android:layout_width="wrap_content" android:layout_height="fill_parent">
       <RelativeLayout android:orientation="horizontal" android:background="#ff000000" android:layout_width="wrap_content" android:layout_height="fill_parent">
       <FrameLayout android:id="@+id/button_1" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/wifi_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_wifi_off" />
        	<com.android.systemui.tranqtoggles.TranqWifiButton  android:id="@+id/tranq_wifi_butt" android:text="@string/but1" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_1" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_1" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>
   		<FrameLayout android:id="@+id/button_2" android:layout_toRightOf="@id/button_1" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/gps_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_gps_off" />
        	<com.android.systemui.tranqtoggles.TranqGpsButton android:id="@+id/but2" android:text="@string/but2" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_2" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_2" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>   
   		<FrameLayout android:id="@+id/button_3" android:layout_toRightOf="@id/button_2" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/bluetooth_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_bluetooth_off" />
        	<com.android.systemui.tranqtoggles.TranqBluetoothButton android:id="@+id/but3" android:text="@string/but3" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_3" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_3" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>  
   		<FrameLayout android:id="@+id/button_4" android:layout_toRightOf="@id/button_3" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/sound_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_sound_off" />
        	<com.android.systemui.tranqtoggles.TranqSoundButton android:id="@+id/but4" android:text="@string/but4" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_4" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_4" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>   
   		<FrameLayout android:id="@+id/button_5" android:layout_toRightOf="@id/button_4" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/airplane_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_airplane_off" />
        	<com.android.systemui.tranqtoggles.TranqAirplaneButton android:id="@+id/but5" android:text="@string/but5" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_5" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_5" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>   
   		<FrameLayout android:id="@+id/button_6" android:layout_toRightOf="@id/button_5" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/brightness_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_brightness_off" />
        	<com.android.systemui.tranqtoggles.TranqBrightnessButton android:id="@+id/but6" android:text="@string/but6" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_6" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_6" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>   
   		<FrameLayout android:id="@+id/button_7" android:layout_toRightOf="@id/button_6" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/rotate_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_rotate_off" />
        	<com.android.systemui.tranqtoggles.TranqRotateButton android:id="@+id/but7" android:text="@string/but7" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="50dip" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_7" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_7" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout>   
   		<FrameLayout android:id="@+id/button_8" android:layout_toRightOf="@id/button_7" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/sync_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_sync_off" />
        	<com.android.systemui.tranqtoggles.TranqSyncButton android:id="@+id/but8" android:text="@string/but8" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_8" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/divider_8" android:layout_gravity="right|center"  android:layout_width="1.5dip" android:layout_height="fill_parent" android:layout_marginTop="4.5dip" android:layout_marginBottom="6.5dip" android:background="#ff353535" />
    	</FrameLayout> 
   		<FrameLayout android:id="@+id/button_9" android:layout_toRightOf="@id/button_8" android:layout_width="60dip" android:layout_height="55.0dip" android:background="#ff262222" android:layout_weight="1.0">
        	<ImageView android:id="@+id/data_icon" android:layout_gravity="center"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2dip" android:layout_marginRight="2.5dip" android:background="@drawable/tranqtoggle_data_off" />
        	<com.android.systemui.tranqtoggles.TranqDataButton android:id="@+id/but9" android:text="@string/but9" android:textSize="9dip" android:textStyle="normal" android:textColor="#ffffffff" android:layout_marginLeft="2.5dip" android:gravity="center_horizontal"   android:layout_width="fill_parent" android:layout_height="65dip"  android:shadowDx="1.0" android:shadowDy="1.0" />
        	<ImageView android:id="@+id/indicator_9" android:layout_gravity="bottom|center"  android:layout_width="fill_parent" android:layout_height="4dip" android:layout_marginBottom="0.5dip" android:layout_marginLeft="2dip" android:layout_marginRight="2.5dip" android:background="#ff696969" android:scaleType="fitXY" android:shadowDx="1.0" android:shadowDy="1.0" />
    	</FrameLayout>    
    	</RelativeLayout>
    </HorizontalScrollView>	
	</com.android.systemui.tranqtoggles.TranqToggleView>
	</RelativeLayout>



    <FrameLayout
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <TextView android:id="@+id/noNotificationsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:padding="8dp"
            android:layout_gravity="top"
            android:gravity="left"
            android:text="@string/status_bar_no_notifications_title"
            />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:overScrollMode="ifContentScrolls"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.android.systemui.statusbar.policy.NotificationRowLayout
                    android:id="@+id/latestItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    systemui:rowHeight="@dimen/notification_height"
                    />

            </LinearLayout>
        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/title_bar_shadow"
            android:scaleType="fitXY"
        />

    </FrameLayout>
</com.android.systemui.statusbar.phone.ExpandedView>
